--- a/app/static/css/components/main-cards.css
+++ b/app/static/css/components/main-cards.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
-    /* Add this line */
+    overflow: hidden;
 }
 
 .main-card h2 {
